Fix up listing display on mobile
The "Want to watch" button in its own column was forcing all the metadata text
into a tiny column on mobile, so move it under the poster thumbnail column.
"Want to watch" didn't fit under the thumbnail, so try using the utf8 two eyes
character. "✓ Watched" fits fine.

Shorten the long forms of GB and US country codes because they're just dumb.

It doesn't make sense to display "119" and "minutes" on separate lines so stick
an &nbsp; in there.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -234,6 +234,11 @@ h3 { font-size: 1rem; }
     border: 1px solid var(--border);
 }
 
+.entry-card-thumb-column {
+    display: flex;
+    flex-direction: column;
+}
+
 .entry-card-body {
     flex: 1;
     min-width: 0;
